--- a/Generators/Upload_Processor_DICT.ipynb
+++ b/Generators/Upload_Processor_DICT.ipynb
@@ -155,7 +155,7 @@
         "        plain_text = \"\\n\".join([reader.pages[i].extract_text().strip() for i in range(0,len(reader.pages))])\n",
         "        plain_text=plain_text.strip()\n",
         "\n",
-        "    initial_prompt = \"\"\"Provide a summary of all the sentences of the drug label that discuss cardiotoxicity risks and cardiotoxic reactions for this drug.\n",
+        "    initial_prompt = \"\"\"Provide a summary of all the parts of the drug label that discuss cardiotoxicity risks and cardiotoxic reactions for this drug.\n",
         "    In your summary of each sentence, clearly state whether the drug itself was associated with or caused the cardiotoxicity risk.\"\"\"\n",
         "\n",
         "\n",
@@ -206,9 +206,9 @@
         "\n",
         "    if index % 100 == 0:\n",
         "      temp_df = pd.DataFrame({\"generic_name\":drugs_list,\"reasoning\":drugs_initial_responses,\"less_determination\":drugs_no_less_most_responses,\"binary_determination\":drugs_yes_no_responses,\"initial_prompts\":initial_prompts,\"no_less_most_prompts\":no_less_most_prompts,\"yes_no_prompts\":yes_no_prompts,\"urls\":fda_label_list})\n",
-        "      temp_df.to_csv(\"/content/drive/MyDrive/ClinicalTrials/Saturday_DICT_direct_4o_cardiotoxicity_temp_comprehensive_\"+str(index)+\".csv\")\n",
+        "      temp_df.to_csv(\"/content/drive/MyDrive/ClinicalTrials/Thursday_DICT_direct_4o_cardiotoxicity_temp_comprehensive_\"+str(index)+\".csv\")\n",
         "final_df = pd.DataFrame({\"generic_name\":drugs_list,\"reasoning\":drugs_initial_responses,\"less_determination\":drugs_no_less_most_responses,\"binary_determination\":drugs_yes_no_responses,\"initial_prompts\":initial_prompts,\"no_less_most_prompts\":no_less_most_prompts,\"yes_no_prompts\":yes_no_prompts,\"urls\":fda_label_list})\n",
-        "final_df.to_csv(\"/content/drive/MyDrive/ClinicalTrials/Saturday_DICT_direct_4o_cardiotoxicity_comprehensive.csv\")"
+        "final_df.to_csv(\"/content/drive/MyDrive/ClinicalTrials/Thursday_DICT_direct_4o_cardiotoxicity_comprehensive.csv\")"
       ]
     },
     {
@@ -247,7 +247,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1KH5UX8NlMfNYkDXbceJPXcAWKmGEv-tR",
-      "authorship_tag": "ABX9TyP0URtRS4yKVO1wwanbtkkE",
+      "authorship_tag": "ABX9TyNrcImdW+BXSnKkqDzD/MTh",
       "include_colab_link": true
     },
     "kernelspec": {
