--- a/Generators/Upload_Processor_DIRIL.ipynb
+++ b/Generators/Upload_Processor_DIRIL.ipynb
@@ -99,7 +99,16 @@
         "set_list = []\n",
         "\n",
         "for index, row in tqdm(df_to_use.iterrows(), total=df_to_use.shape[0]):\n",
+        "    #url=url.replace(\"https://fdalabel.fda.gov:8443\",\"https://nctr-crs.fda.gov\")\n",
+        "    #if \"nctr-crs.fda.gov\" in url:\n",
+        "    #print(plain_text)\n",
+        "    #elif \"accessdata\" in url:\n",
+        "    #    r = requests.get(url)\n",
+        "    #    f = io.BytesIO(r.content)\n",
         "\n",
+        "    #    reader = PyPDF2.PdfReader(f)\n",
+        "    #    plain_text = \"\\n\".join([reader.pages[i].extract_text().strip() for i in range(0,len(reader.pages))])\n",
+        "    #    plain_text=plain_text.strip()\n",
         "\n",
         "\n",
         "\n",
@@ -184,7 +193,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1-kzxt06DpuOhepOugxsQgF_VOzOJ6Hr2",
-      "authorship_tag": "ABX9TyOfTKGLDPF5+xaQL7KSw6hT",
+      "authorship_tag": "ABX9TyM2LFa776irQ/A9Lg8c+hm2",
       "include_colab_link": true
     },
     "kernelspec": {
