Updating naming of headers in data files and adding chemprop commands

--- a/Results/analyze_clinician_scores.ipynb
+++ b/Results/analyze_clinician_scores.ipynb
@@ -53,10 +53,10 @@
    },
    "cell_type": "code",
    "source": [
-    "# For each person, create a stacked bar plot of the counts of less_determination_score and binary_determination_score\n",
+    "# For each person, create a stacked bar plot of the counts of less_rating_score and binary_rating_score\n",
     "score_type_to_name = {\n",
-    "    \"less_determination_score\": \"Ternary Determination\",\n",
-    "    \"binary_determination_score\": \"Binary Determination\",\n",
+    "    \"less_rating_score\": \"Ternary Rating\",\n",
+    "    \"binary_rating_score\": \"Binary Rating\",\n",
     "}\n",
     "\n",
     "for score_type, score_name in score_type_to_name.items():\n",
@@ -141,12 +141,12 @@
     }
    },
    "source": [
-    "# Loop through each sheet of zaniar and make a bar plot of counts for less_determination_score and binary_determination_score\n",
+    "# Loop through each sheet of zaniar and make a bar plot of counts for less_rating_score and binary_rating_score\n",
     "for name, data in name_to_data.items():\n",
     "    for sheet, tox_data in data.items():\n",
     "        fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "        sns.countplot(x=\"less_determination_score\", data=tox_data, ax=ax[0])\n",
-    "        sns.countplot(x=\"binary_determination_score\", data=tox_data, ax=ax[1])\n",
+    "        sns.countplot(x=\"less_rating_score\", data=tox_data, ax=ax[0])\n",
+    "        sns.countplot(x=\"binary_rating_score\", data=tox_data, ax=ax[1])\n",
     "        fig.suptitle(f\"{name} {sheet}\")\n",
     "        plt.show()"
    ],
@@ -265,10 +265,10 @@
    },
    "source": [
     "# Load GNN model results\n",
-    "chemprop_less_random = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_less_determination_no_most_only_0_1_cv/test_scores.csv\")\n",
-    "chemprop_binary_random = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_binary_determination_0_1_cv/test_scores.csv\")\n",
-    "chemprop_less_scaffold = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_less_determination_no_most_only_0_1_scaffold_balanced/test_scores.csv\")\n",
-    "chemprop_binary_scaffold = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_binary_determination_0_1_scaffold_balanced/test_scores.csv\")"
+    "chemprop_less_random = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_confident_ternary_rating_0_1_cv/test_scores.csv\")\n",
+    "chemprop_binary_random = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_binary_rating_0_1_cv/test_scores.csv\")\n",
+    "chemprop_less_scaffold = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_confident_ternary_rating_0_1_scaffold_balanced/test_scores.csv\")\n",
+    "chemprop_binary_scaffold = pd.read_csv(\"~/Downloads/FinaluniTox/models/chemprop_rdkit_binary_rating_0_1_scaffold_balanced/test_scores.csv\")"
    ],
    "outputs": [],
    "execution_count": 146
@@ -308,7 +308,7 @@
    "source": [
     "for data in [chemprop_less_random, chemprop_binary_random, chemprop_less_scaffold, chemprop_binary_scaffold]:\n",
     "    data[\"Task\"] = [\n",
-    "        task.replace(\"_less_determination_no_most_only_0_1\", \"\").replace(\"_binary_determination_0_1\", \"\")\n",
+    "        task.replace(\"_confident_ternary_rating_0_1\", \"\").replace(\"_binary_rating_0_1\", \"\")\n",
     "        for task in data[\"Task\"]\n",
     "    ]\n",
     "    data[\"Task\"] = data[\"Task\"].map(task_map)"
@@ -337,7 +337,7 @@
     "            ecolor='black',  # Color of the error bars\n",
     "            capsize=5,  # Length of the error bar caps\n",
     "            capthick=2)  # Thickness of the error bar caps\n",
-    "ax.set_title(\"Ternary Determination Random Split\")\n",
+    "ax.set_title(\"Ternary Rating Random Split\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "ax.axhline(0.5, color=\"red\")\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/chemprop_ternary_random.pdf\", bbox_inches=\"tight\")"
@@ -383,7 +383,7 @@
     "            ecolor='black',  # Color of the error bars\n",
     "            capsize=5,  # Length of the error bar caps\n",
     "            capthick=2)  # Thickness of the error bar caps\n",
-    "ax.set_title(\"Binary Determination Random Split\")\n",
+    "ax.set_title(\"Binary Rating Random Split\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "ax.axhline(0.5, color=\"red\")\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/chemprop_binary_random.pdf\", bbox_inches=\"tight\")"
@@ -431,7 +431,7 @@
     "            ecolor='black',  # Color of the error bars\n",
     "            capsize=5,  # Length of the error bar caps\n",
     "            capthick=2)  # Thickness of the error bar caps\n",
-    "ax.set_title(\"Ternary Determination Scaffold Split\")\n",
+    "ax.set_title(\"Ternary Rating Scaffold Split\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "ax.axhline(0.5, color=\"red\")\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/chemprop_ternary_scaffold.pdf\", bbox_inches=\"tight\")"
@@ -478,7 +478,7 @@
     "            ecolor='black',  # Color of the error bars\n",
     "            capsize=5,  # Length of the error bar caps\n",
     "            capthick=2)  # Thickness of the error bar caps\n",
-    "ax.set_title(\"Binary Determination Scaffold Split\")\n",
+    "ax.set_title(\"Binary Rating Scaffold Split\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "ax.axhline(0.5, color=\"red\")\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/chemprop_binary_scaffold.pdf\", bbox_inches=\"tight\")"
@@ -518,8 +518,8 @@
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "bar_width = 0.35\n",
     "x_axis = np.arange(len(chemprop_less_scaffold))\n",
-    "ax.bar(x_axis, chemprop_less_scaffold[\"Mean auc\"], bar_width, label=\"Ternary Determination\")\n",
-    "ax.bar(x_axis + bar_width, chemprop_binary_scaffold[\"Mean auc\"], bar_width, label=\"Binary Determination\")\n",
+    "ax.bar(x_axis, chemprop_less_scaffold[\"Mean auc\"], bar_width, label=\"Ternary rating\")\n",
+    "ax.bar(x_axis + bar_width, chemprop_binary_scaffold[\"Mean auc\"], bar_width, label=\"Binary Rating\")\n",
     "ax.errorbar(x=x_axis,\n",
     "            y=chemprop_less_scaffold[\"Mean auc\"],\n",
     "            yerr=chemprop_less_scaffold[\"Standard deviation auc\"],\n",
@@ -569,8 +569,8 @@
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "bar_width = 0.35\n",
     "x_axis = np.arange(len(chemprop_less_random))\n",
-    "ax.bar(x_axis, chemprop_less_random[\"Mean auc\"], bar_width, label=\"Ternary Determination\")\n",
-    "ax.bar(x_axis + bar_width, chemprop_binary_random[\"Mean auc\"], bar_width, label=\"Binary Determination\")\n",
+    "ax.bar(x_axis, chemprop_less_random[\"Mean auc\"], bar_width, label=\"Ternary Rating\")\n",
+    "ax.bar(x_axis + bar_width, chemprop_binary_random[\"Mean auc\"], bar_width, label=\"Binary Rating\")\n",
     "ax.errorbar(x=x_axis,\n",
     "            y=chemprop_less_random[\"Mean auc\"],\n",
     "            yerr=chemprop_less_random[\"Standard deviation auc\"],\n",
