--- a/Results/merge_unitox.ipynb
+++ b/Results/merge_unitox.ipynb
@@ -83,12 +83,12 @@
     "\n",
     "    data.rename(columns={\n",
     "        \"reasoning\": f\"{name}_reasoning\",\n",
-    "        \"less_determination\": f\"{name}_less_determination\",\n",
-    "        \"binary_determination\": f\"{name}_binary_determination\",\n",
+    "        \"ternary_rating\": f\"{name}_ternary_rating\",\n",
+    "        \"binary_rating\": f\"{name}_binary_rating\",\n",
     "    }, inplace=True)\n",
     "\n",
-    "    data[f\"{name}_less_determination_no_most_only_0_1\"] = [1 if tox == \"Most\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_less_determination\"]]\n",
-    "    data[f\"{name}_binary_determination_0_1\"] = [1 if tox == \"Yes\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_binary_determination\"]]\n",
+    "    data[f\"{name}_ternary_rating_no_most_only_0_1\"] = [1 if tox == \"Most\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_ternary_rating\"]]\n",
+    "    data[f\"{name}_binary_rating_0_1\"] = [1 if tox == \"Yes\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_binary_rating\"]]\n",
     "\n",
     "# Merge datasets on generic name\n",
     "datasets = list(name_to_dataset.values())\n",
@@ -263,8 +263,8 @@
    "source": [
     "for name in name_to_dataset:\n",
     "    print(name)\n",
-    "    sub_data = data_with_smiles[data_with_smiles[f\"{name}_less_determination_no_most_only_0_1\"].notna()]\n",
-    "    print(sum(sub_data[f\"{name}_less_determination_no_most_only_0_1\"] != sub_data[f\"{name}_binary_determination_0_1\"]))"
+    "    sub_data = data_with_smiles[data_with_smiles[f\"{name}_confident_ternary_rating_0_1\"].notna()]\n",
+    "    print(sum(sub_data[f\"{name}_confident_ternary_rating_0_1\"] != sub_data[f\"{name}_binary_rating_0_1\"]))"
    ]
   },
   {
@@ -319,7 +319,7 @@
    ],
    "source": [
     "for name in name_to_dataset:\n",
-    "    print(data_with_smiles.groupby(\"smiles\")[f\"{name}_binary_determination_0_1\"].nunique().value_counts())"
+    "    print(data_with_smiles.groupby(\"smiles\")[f\"{name}_binary_rating_0_1\"].nunique().value_counts())"
    ]
   },
   {
@@ -334,10 +334,10 @@
    },
    "outputs": [],
    "source": [
-    "# Keep only those SMILES that do not have multiple labels for less_determination or binary_determination\n",
+    "# Keep only those SMILES that do not have multiple labels for ternary_rating or binary_rating\n",
     "smiles_to_keep = []\n",
     "for smiles, group in data_with_smiles.groupby(\"smiles\"):\n",
-    "    if all(group[f\"{name}_{suffix}\"].nunique() <= 1 for name in name_to_dataset for suffix in [\"less_determination\", \"binary_determination\"]):\n",
+    "    if all(group[f\"{name}_{suffix}\"].nunique() <= 1 for name in name_to_dataset for suffix in [\"ternary_rating\", \"binary_rating\"]):\n",
     "        smiles_to_keep.append(smiles)"
    ]
   },
@@ -413,8 +413,8 @@
     "name_to_binary_balance = {}\n",
     "for name in name_to_dataset:\n",
     "    # Determine class balance for each name and less/binary\n",
-    "    name_to_less_balance[name] = (gnn_data[f\"{name}_less_determination_no_most_only_0_1\"] == 1).sum() / gnn_data[f\"{name}_less_determination_no_most_only_0_1\"].notna().sum()\n",
-    "    name_to_binary_balance[name] = (gnn_data[f\"{name}_binary_determination_0_1\"] == 1).sum() / gnn_data[f\"{name}_binary_determination_0_1\"].notna().sum()"
+    "    name_to_less_balance[name] = (gnn_data[f\"{name}_confident_ternary_rating_0_1\"] == 1).sum() / gnn_data[f\"{name}_ternary_rating_0_1\"].notna().sum()\n",
+    "    name_to_binary_balance[name] = (gnn_data[f\"{name}_binary_rating_0_1\"] == 1).sum() / gnn_data[f\"{name}_binary_rating_0_1\"].notna().sum()"
    ]
   },
   {
@@ -446,7 +446,7 @@
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "sns.barplot(x=tasks, y=list(name_to_less_balance.values()), ax=ax)\n",
-    "ax.set_title(\"Class Balance for Ternary Determination\")\n",
+    "ax.set_title(\"Class Balance for Confident Ternary Rating\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/class_balance_ternary.pdf\", bbox_inches=\"tight\")"
    ],
@@ -484,7 +484,7 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "sns.barplot(x=tasks, y=list(name_to_binary_balance.values()), ax=ax)\n",
-    "ax.set_title(\"Class Balance for Binary Determination\")\n",
+    "ax.set_title(\"Class Balance for Binary Rating\")\n",
     "ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
     "plt.savefig(\"/Users/kyleswanson/Downloads/FinaluniTox/figures/class_balance_binary.pdf\", bbox_inches=\"tight\")"
    ],
